k8s/ingress.gras.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gras
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello.grascannabis.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gras-service-hello
            port:
              number: 80
  # - host: shop.grascannabis.org
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: gras-service-shop
  #           port:
  #             number: 80
